Kubernetes/Project/api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
spec:
  selector:
    matchLabels:
      component: api
  template:
    metadata:
      labels:
        component: api
    spec:
      containers:
        - name: api-app
          image: docker.io/SirishaNolli0507/simple_blog_api
          resources:
            limits:
                  memory: "256Mi"
                  cpu: "1"
          ports:
            - containerPort: 3000
